# Financial_researcher

./: README.md
Fin-research/: project.md
Fin-research/financ/: README.md  pyproject.toml
Fin-research/financ/output/: report.md
Fin-research/financ/src/financ/: main.py
Fin-research/financ/src/financ/config/: tasks.yaml
