[project]
name = "financ"
version = "0.1.0"
description = "Financ using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
financ = "financ.main:run"
run_crew = "financ.main:run"
train = "financ.main:train"
replay = "financ.main:replay"
test = "financ.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
